--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,8 @@ body:after {
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
   .btn.btn-primary {
-    background: #a2c0be;
-    border-color: #a2c0be;
+    background: #ad45ce;
+    border-color: #ad45ce;
     color: #fff; }
     .btn.btn-primary:hover {
       background: #000;
